<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bshSubscriptions"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_gradient_top_radius"
    android:elevation="8dp"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="@string/bottom_sheet_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <RelativeLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:clipChildren="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTitleOfOperations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/bold"
                android:gravity="center_horizontal"
                android:text="Subscriptions"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_done"
                app:tint="@color/GrayscaleMineShaft" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/FullFunctionality"
                android:textColor="@color/GrayscaleMineShaft" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_done"
                app:tint="@color/GrayscaleMineShaft" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/NoAds"
                android:textColor="@color/GrayscaleMineShaft" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/bold"
            android:text="@string/GroupPhotoStandardInfo"
            android:textColor="@color/GrayscaleMineShaft"
            android:textColorLink="@color/blue"
            android:textSize="16sp" />

        <com.groupphoto.app.components.GroupPhotoSelectionView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:prices="@array/PaymentPrices"
            app:subtitles="@array/PaymentSubtitles"
            app:titles="@array/PaymentTitles" />

        <Button
            android:id="@+id/btnPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/background_button_primary"
            android:text="Pay"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>


</FrameLayout>