<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/LightLinkWater">

            <LinearLayout
                android:id="@+id/llProfileTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_bottom_right_rounded"
                android:orientation="vertical"
                android:paddingStart="12dp"
                android:paddingTop="12dp"
                android:paddingEnd="12dp"
                android:paddingBottom="12dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:context=".presentation.main.profile.ProfileFragment">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_logo_inline" />

                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/book"
                    android:text="@string/WelcomeBack"
                    android:textColor="@color/LighterSub" />

                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <FrameLayout
                        android:layout_width="56dp"
                        android:layout_height="56dp">

                        <TextView
                            android:id="@+id/tvAvatarLetter"
                            android:layout_width="56dp"
                            android:layout_height="56dp"
                            android:layout_gravity="center"
                            android:background="@drawable/circle_profile"
                            android:gravity="center"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            tools:text="u" />

                        <ImageView
                            android:id="@+id/ivAvatar"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop" />
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tvUserName"
                            style="@style/TextStyleTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="User" />

                        <TextView
                            android:id="@+id/tvEmail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:fontFamily="@font/book"
                            tools:text="test@email.com" />
                    </LinearLayout>

                </LinearLayout>

                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey" />

                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <TextView
                    android:id="@+id/tvPlanStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bold"
                    android:text="@string/FreePlan"
                    android:textColor="@color/DarkBlue"
                    android:textSize="18sp" />

                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <ProgressBar
                    android:id="@+id/pbUploadingImage"
                    style="@android:style/Widget.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:indeterminate="false"
                    android:indeterminateTint="@color/colorPrimary"
                    android:indeterminateTintMode="src_in"
                    android:max="100"
                    android:progress="0"
                    android:progressBackgroundTint="@color/LinkWater"
                    android:progressDrawable="@drawable/gradient_progress_bar"
                    android:visibility="visible" />

                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <TextView
                    android:id="@+id/tvUsedStorage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/book"
                    android:gravity="end"
                    android:textColor="@color/TextSub"
                    tools:text="0MB of 2GB" />

                <androidx.legacy.widget.Space
                    android:layout_width="match_parent"
                    android:layout_height="12dp" />


                <TextView
                    android:id="@+id/tvUpgrade"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/book"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/UpgradeInfo"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:visibility="visible" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/llProfileBottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llProfileTop">

                <com.groupphoto.app.components.MenuItemView
                    android:id="@+id/menuBackupSettings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menuIcon="@drawable/ic_backup_settings"
                    app:menuTitle="@string/BackupSettings" />

                <com.groupphoto.app.components.MenuItemView
                    android:id="@+id/menuBackupHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menuIcon="@drawable/ic_history"
                    app:menuTitle="@string/BackupHistory" />

                <com.groupphoto.app.components.MenuItemView
                    android:id="@+id/menuLogout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:menuIcon="@drawable/ic_logout"
                    app:menuTitle="@string/Logout" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/pbProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@id/llProfileTop"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                app:layout_constraintTop_toBottomOf="@id/llProfileTop"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/fSubscription"
        layout="@layout/fragment_subscription" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>
